<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/idtext"
        android:layout_width="173dp"
        android:layout_height="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <TextView
        android:id="@+id/model_id"
        android:layout_width="80dp"
        android:layout_height="10dp"
        android:layout_marginTop="4dp"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/model_name"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/model_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/make"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/model_name" />

    <TextView
        android:id="@+id/group"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/series" />

    <TextView
        android:id="@+id/color"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toStartOf="@+id/series"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/series"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/make" />

    <TextView
        android:id="@+id/fuelType"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/group"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/color"
        app:layout_constraintTop_toBottomOf="@+id/color" />

    <TextView
        android:id="@+id/fuelLevel"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toStartOf="@+id/transmission"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fuelType"
        app:layout_constraintTop_toBottomOf="@+id/fuelType" />

    <TextView
        android:id="@+id/transmission"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/group" />

    <TextView
        android:id="@+id/licensePlate"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/transmission"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/transmission" />

    <TextView
        android:id="@+id/cleanliness"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/fuelLevel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelLevel" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="162dp"
        android:layout_height="85dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/model_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/model_name"
        app:layout_constraintEnd_toEndOf="@+id/model_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/model_name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/model_make"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/make"
        app:layout_constraintEnd_toEndOf="@+id/make"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/make"
        app:layout_constraintTop_toBottomOf="@+id/model_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/colour"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/color"
        app:layout_constraintEnd_toEndOf="@+id/color"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="@+id/color"
        app:layout_constraintTop_toBottomOf="@+id/model_id" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/series"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/series"
        app:layout_constraintEnd_toEndOf="@+id/series"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/series" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_type"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fuelType"
        app:layout_constraintEnd_toEndOf="@+id/fuelType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fuelType" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/group"
        app:layout_constraintEnd_toEndOf="@+id/group"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/group" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/fuel_level"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fuelLevel"
        app:layout_constraintEnd_toEndOf="@+id/fuelLevel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fuelLevel" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/transmission"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/transmission"
        app:layout_constraintEnd_toEndOf="@+id/transmission"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/transmission" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/cleanliness"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cleanliness"
        app:layout_constraintEnd_toEndOf="@+id/cleanliness"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="@+id/cleanliness" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license_plate"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/licensePlate"
        app:layout_constraintEnd_toEndOf="@+id/licensePlate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/licensePlate" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:text="@string/model_id"
        android:textSize="8sp"
        app:layout_constraintEnd_toStartOf="@+id/model_id"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>